# overpunch_ng

./: .clippy.toml  .gitignore  Cargo.toml  LICENSE  README.md  codecov.yml  generate_coverage.sh  lint_and_test.sh  rustfmt.toml
.github/workflows/: ci.yml
benches/: benchmark.rs
src/: core.rs  encoding.rs  error.rs  lib.rs
tests/: integration_test.rs  property_tests.proptest-regressions  property_tests.rs
