[package]
name = "overpunch_ng"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Robust and extensible signed overpunch parsing and formatting for Rust Decimals"
homepage = "https://github.com/copyleftdev/overpunch_ng" # Example URL
repository = "https://github.com/copyleftdev/overpunch_ng" # Example URL
keywords = ["overpunch", "cobol", "mainframe", "decimal", "ebcdic"]
categories = ["parsing", "value-formatting", "encoding"]
readme = "README.md"

[dependencies]
rust_decimal = "1.36.0"
thiserror = "2.0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
test-log = "0.2.16"
proptest = "1.3.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[[bench]]
name = "benchmark"
harness = false